# makeSEAL

./: .gitignore  CMakeLists.txt  README.md
run/: CMakeLists.txt  Hom_Lin_Trans_Draft_4 p=127.cpp  Hom_Lin_Trans_Draft_4 p=256.cpp  runSEAL.cpp  slots.cpp
